sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:3: error: not enough arguments for constructor Array: (_length: Int)Array[T].
Unspecified value parameter _length.
	var T:Int=new Array
                  ^AlgBubbleSort1:7: error: not found: value length
	for (i<- 0 to length-2)
                      ^